--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
      More info: h5bp.com/b/378 -->
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
-<title>URL FORM DE REVISION DE TRABAJOS PRÁCTICOS</title>
-<meta name="description" content="." />
+<title>Form de Revisión - Generador de URL</title>
+<meta name="description" content="Form de Revisión - Generador de URL" />
 <meta name="keywords" content="" />
 <meta name="author" content="humans.txt">
 
@@ -31,7 +31,7 @@
 
 <section class="row">
 <form id="ghpagesForm" name="ghpagesForm" method="post" action="" data-form="validate">
-<h2>Form de Revisión - URL Generator</h2>
+<h2>Form de Revisión - Generador de URL</h2>
 
 <dl class="field row">
 <dt class="text"><input type="text" name="repoName" id="repoName" placeholder="Nombre del estudiante" required /></dt>
